refactor: Migrate FareZone to new model